--- a/languages/header-footer-elementor.pot
+++ b/languages/header-footer-elementor.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Ultimate Addons for Elementor Lite 2.6.2\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/header-footer-elementor\n"
-"POT-Creation-Date: 2025-11-11 06:14:40+00:00\n"
+"POT-Creation-Date: 2025-11-12 04:56:14+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1855,7 +1855,7 @@ msgid "Create high-converting forms with ease."
 msgstr ""
 
 #: inc/widgets-manager/base/widgets-config.php:1195
-msgid "OttoKit (Formerly SureTriggers)"
+msgid "OttoKit"
 msgstr ""
 
 #: inc/widgets-manager/base/widgets-config.php:1196
@@ -3790,10 +3790,10 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Formerly known as \"Elementor Header & Footer Builder\", this powerful "
-"plugin allows you to create custom headers and footers with Elementor and "
-"display them in selected locations. You can also create custom Elementor "
-"blocks and place them anywhere on your website using a shortcode."
+"Ultimate Addons is a powerful plugin allows you to create custom headers "
+"and footers with Elementor and display them in selected locations. You can "
+"also create custom Elementor blocks and place them anywhere on your website "
+"using a shortcode."
 msgstr ""
 
 #. Author of the plugin/theme
